# m_slam

interfaces/: .gitignore  package.xml
m-vins-slim/src/octomap_core/: CMakeLists.txt
m-vins-slim/src/octomap_core/include/octomap_core/: octo_mapper.h  pointcloud_filter.h
m_slam/interfaces/: CMakeLists.txt  README.md
m_slam/interfaces/.gitlab/issue_templates/: test_case.md
m_slam/interfaces/action/: Arm.action  Hand.action  Nav.action  Skill.action  VisualServo.action
m_slam/interfaces/msg/: Audiodata.msg  BaseFeedback.msg  BaseHead.msg  BehaviorTreeStatusChange.msg  ForceSensorState.msg  HandServerState.msg  LinearActuatorState.msg  PoseStampedArray.msg  TactileSensorState.msg  TorsoServerState.msg
m_slam/interfaces/srv/: ArmMdhCalibration.srv  DeviceCommand.srv  ManipVisonService.srv  ObjectPoseEstimation.srv  RemoteSpeak.srv  SkillService.srv  SocketTaskCommand.srv  TargetLocFeedbackAdjustSrv.srv  TaskCommand.srv  TransformPose.srv
m_slam/m-vins-slim/: CMakeLists.txt  README.md  REMOVED_ITEMS.txt  package.xml
m_slam/m-vins-slim/assets/: superpoint_240_320_fp16_int8.rknn  superpoint_240_320_fp16_int8_pruned.rknn  superpoint_v1_fp16.rknn
m_slam/m-vins-slim/cfg/: calib_avaia_cleaner.yaml  calib_uhumans2.yaml  config_default.yaml  config_idle.yaml  config_mapping.yaml  config_reloc.yaml
m_slam/m-vins-slim/cfg_bk/: calib_avaia_cleaner.yaml  calib_d435.yaml  calib_euroc.yaml
m_slam/m-vins-slim/docs/: OPTIMIZATION_LOG.md  PENDING_DELETE_CHECKLIST.md
m_slam/m-vins-slim/launch/: run_m_vins.launch.py
m_slam/m-vins-slim/scripts/: call_service.sh  kill_all.sh  slam_offline.sh  slam_online_log_clear.sh
m_slam/m-vins-slim/scripts/rviz/: m-vins.rviz
m_slam/m-vins-slim/src/: m_vins_node.cc
m_slam/m-vins-slim/src/loop_closure/: CMakeLists.txt
m_slam/m-vins-slim/src/loop_closure/include/loop_detector/: loop_detector.h  pnp.h  scoring.h
m_slam/m-vins-slim/src/loop_closure/include/loop_index/: helpers.h  inverted_multi_index_common.h  inverted_multi_index_interface.h  kd_tree_index_interface.h
m_slam/m-vins-slim/src/loop_closure/include/loop_interface/: loop_settings.h  visual_loop_interface.h
m_slam/m-vins-slim/src/loop_closure/include/summary_map/: db_define.h  summary_map.h
m_slam/m-vins-slim/src/loop_closure/src/loop_index/: inverted_multi_index.cc
m_slam/m-vins-slim/src/loop_closure/src/loop_interface/: loop_setting.cc  visual_loop_interface.cc
m_slam/m-vins-slim/src/loop_closure/src/summary_map/: map_saver.cc
m_slam/m-vins-slim/src/octomap_core/: CMakeLists.txt
m_slam/m-vins-slim/src/octomap_core/include/octomap_core/: octo_interface.h
m_slam/m-vins-slim/src/octomap_core/src/: octo_interface.cc  octo_mapper.cc  pointcloud_filter.cc
m_slam/m-vins-slim/src/ros_interface/: CMakeLists.txt  m_vins_node.cc
m_slam/m-vins-slim/src/ros_interface/interface/src/: image_interface.cc  imu_interface.cc  interface.cc  laser_interface.cc  mask_manager.cc  odom_interface.cc
m_slam/m-vins-slim/src/ros_interface/ros_handler/src/: configurate_interface.cc  ros_life_circle_handler.cc  ros_publisher_handler.cc  ros_service_handler.cc  ros_subscriber_handler.cc  rosbag_parsing_handler.cc
m_slam/m-vins-slim/src/vins_common/: CMakeLists.txt
m_slam/m-vins-slim/src/vins_common/include/cfg_common/: config_base.h  slam_config.h
m_slam/m-vins-slim/src/vins_common/include/data_common/: constants.h  state_structures.h  visual_structures.h
m_slam/m-vins-slim/src/vins_common/include/file_common/: file_system_tools.h
m_slam/m-vins-slim/src/vins_common/include/log_common/: logging_tools.h
m_slam/m-vins-slim/src/vins_common/include/math_common/: math.h  nano_ekf.h
m_slam/m-vins-slim/src/vins_common/include/occ_common/: common.h  fast_correlative_scan_matcher.h  map_limits.h  probability_grid.h  realtime_correlative_scan_matcher.h  submap_2d.h  xy_index.h
m_slam/m-vins-slim/src/vins_common/include/parallel_common/: parallel_process.h
m_slam/m-vins-slim/src/vins_common/include/time_common/: time.h  time_table.h  time_table_events.h
m_slam/m-vins-slim/src/vins_common/include/yaml_common/: yaml_util.h
m_slam/m-vins-slim/src/vins_common/src/cfg_common/: slam_config.cc
m_slam/m-vins-slim/src/vins_common/src/file_common/: binary_serialization.cc  file_system_tools.cc
m_slam/m-vins-slim/src/vins_common/src/log_common/: logging_tools.cc
m_slam/m-vins-slim/src/vins_core/: CMakeLists.txt
m_slam/m-vins-slim/src/vins_handler/: CMakeLists.txt
m_slam/m-vins-slim/src/vins_handler/src/: map_tool.cc  vins_handler.cc  vins_monitor.cc  vins_thread.cc
m_slam/m-vins-slim/src_visual_old/loop_closure/: CMakeLists.txt
m_slam/m-vins-slim/src_visual_old/ros_interface/: CMakeLists.txt  m_vins_node.cc
m_slam/m-vins-slim/src_visual_old/vins_handler/: CMakeLists.txt
m_slam/m-vins-slim/src_visual_old/vins_handler/src/: vins_handler.cc  vins_thread.cc
m_slam/m-vins-slim/third_lib/: CMakeLists.txt
m_slam/m-vins-slim/tools/gt_noisy/: odom_noisy.py
m_slam/m-vins-slim/tools/octomap2ply/: CMakeLists.txt  convert_octomap_to_ply.cc
m_slam/m-vins-slim/tools/trajectory_evaluator/: compute_rmse.py  detect_motion.py  rigid_estimate.py  split_log.py  sync_pose_pair.py  trajectory_evaluate.py
m_slam/mirobot_msgs/: CMakeLists.txt  package.xml
m_slam/mirobot_msgs/action/: GlobalPlanner.action
m_slam/mirobot_msgs/msg/android/: ErrorCode.msg  LogData.msg  NavStatus.msg  SmachRequest.msg
m_slam/mirobot_msgs/msg/chassis/: HardWareDetail.msg  HeadDetail.msg
m_slam/mirobot_msgs/msg/planning/: ObstacleType.msg  Trajectory2D.msg
m_slam/mirobot_msgs/srv/: ArmAction.srv  ChassisCmd.srv  ScoreTrajectory.srv  SlamService.srv  Xd1aAction.srv
ydlidar_ros/: .gitignore  CMakeLists.txt  README.md
ydlidar_ros/scripts/: run_online_machine.sh
ydlidar_ros/sdk/: CMakeLists.txt
ydlidar_ros/src/: ydlidar_node_main.cpp  ydlidar_sub_node.cpp  ydlidar_sub_node.h
ydlidar_ros/third_lib/: CMakeLists.txt
ydlidar_ros/third_lib/glog/: CMakeLists.txt  config.h  logging.cc  main.cc
ydlidar_ros/third_lib/glog/glog/: logging.h
ydlidar_ros/third_lib/yaml-cpp/yaml-cpp/node/: node.h
(+207 files in other folders)
