<?xml version="1.0"?>
<package format="3">
  <name>m_vins</name>
  <version>0.1.0</version>
  <description>m_vins non-visual slim package</description>
  <maintainer email="robot@todo.todo">robot</maintainer>
  <license>Proprietary</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>rclcpp</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
